--- a/src/app/student-list/student-list.component.css
+++ b/src/app/student-list/student-list.component.css
@@ -1,12 +1,29 @@
-body {
+.body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  background-image: url('/assets/background1.jpg'); /* Substitua com o caminho real da sua imagem */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+}
+
+.container,
+.header,
+.filter,
+.students-container,
+.student-info,
+.details,
+.expanded-info,
+.action-buttons {
+  background-color: transparent;
 }
 
 .container {
-  position: relative;
   text-align: center;
+  margin: 20px;
 }
 
 .page-title {
@@ -14,202 +31,171 @@ body {
   font-size: 30px;
   margin-bottom: 20px;
   font-weight: bold;
-  font-size: 60px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  font-size: 36px;
+  margin-top: 40px; /* Afastado do topo */
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  margin-bottom: 20px;
 }
 
 .filter {
   display: flex;
   align-items: center;
-  margin-left: 5%; /* Use porcentagem para tornar mais responsivo */
+}
+
+label {
+  margin-right: 10px;
 }
 
 .filter select {
-  margin-right: 10px;
-  height: 30px;
-  width: 70px;
-  font-size: 15px;
-  border: 1px solid #001f3f;
+  height: 34px; /* Ajusta a altura para ser igual ao botão Filtrar */
+  border: none;
   border-radius: 5px;
-  padding: 5px;
+  margin-right: 5px; /* Espaçamento entre o select e o botão Filtrar */
+  padding: 5px; /* Espaçamento interno */
   background-color: #fff;
   color: #001f3f;
-  cursor: pointer;
-  appearance: none;
+  font-size: 14px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.filter select:hover {
-  background-color: #f0f8ff;
-}
-
+.filter select:hover,
 .filter select:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(0, 31, 63, 0.5);
+  background-color: #f2f2f2;
 }
 
-.filter-button {
+.filter-button,
+.add-button {
   background-color: #001f3f;
   color: #fff;
   border: none;
-  padding: 8px 10px;
+  padding: 8px;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.add-button {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #001f3f;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  font-size: 40px;
-  font-weight: bold;
+.filter-button:hover,
+.add-button:hover {
+  background-color: #003366;
 }
 
 .students-container {
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
-  margin: 20px auto;
-}
-
-.titles {
-  background-color: #001f3f;
-  color: #fff;
-  display: flex;
-  padding: 15px;
-  border-bottom: 1px solid #ddd;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  font-weight: bold;
-  flex-wrap: wrap;
-}
-
-.titleNome {
-  flex: 1;
-  text-align: center;
-  margin-left: -40px;
-}
-
-.titleMatricula {
-  flex: 1;
-  text-align: center;
-  margin-left: -60px;
-}
-
-.titleIdade {
-  flex: 1;
-  text-align: center;
-  margin-left: -50px;
-}
-
-.titleSerie {
-  text-align: center;
-  margin-left: 90px;
-}
-
-.titleAcoes {
-  flex: 1;
-  text-align: center;
-  margin-right: -90px;
 }
 
 .students-list {
-  list-style-type: none;
+  list-style: none;
   padding: 0;
-}
-
-.students-list li {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-}
-
-.students-list li.even-row {
-  background-color: #f0f8ff;
-}
-
-.students-list li.odd-row {
-  background-color: #fff;
+  margin: 0;
 }
 
 .student-info {
-  flex: 1;
+  background-color: #fff;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  position: relative;
+}
+
+.student-info:hover {
+  background-color: #f2f2f2;
+}
+
+.details {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+}
+
+.expanded-info {
+  display: flex;
+  flex-wrap: wrap; /* Ajuste para que os detalhes possam quebrar para a próxima linha se não houver espaço suficiente */
+  justify-content: space-around; /* Distribuir os detalhes igualmente */
+  width: 100%;
+  margin-top: 10px;
+}
+
+.title {
+  font-weight: bold;
+  flex-basis: 100%; /* Ocupar 100% da largura */
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.nome {
+  font-size: 14px; /* Diminui a fonte do nome */
 }
 
 .info {
-  flex: 1;
+  font-size: 14px; /* Diminui a fonte dos dados */
+  flex-basis: 48%; /* Ocupar quase metade da largura para dois detalhes por linha */
   text-align: center;
+  margin-bottom: 10px;
+}
+
+.info-nome {
+  font-size: 18px; /* Aumenta a fonte do nome */
 }
 
 .action-buttons {
   display: flex;
-  gap: 10px;
-  justify-content: center;
+  justify-content: center; /* Centraliza os botões */
+  margin-top: 10px; /* Espaçamento entre detalhes e botões */
 }
 
-.action-button {
-  background-color: #001f3f;
+.edit-button,
+.delete-button {
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  margin-right: 10px; /* Espaçamento entre os botões */
+}
+
+.edit-button {
+  background-image: url('/assets/pencil.png');
+}
+
+.delete-button {
+  background-image: url('/assets/trash.png');
+}
+
+.edit-button:hover,
+.delete-button:hover {
+  transform: scale(1.1);
+}
+
+.add-button {
+  background-color: #001f3f; /* Cor navy blue */
   color: #fff;
   border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
+  padding: 20px;
+  width: 60px; /* Aumenta a largura para evitar achatamento */
+  height: 60px; /* Aumenta a altura para evitar achatamento */
+  border-radius: 50%; /* Faz o botão ficar redondo */
   cursor: pointer;
-}
-
-.filter-button:hover,
-.add-button:hover,
-.action-button:hover {
-  background-color: #003366;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.filter-button:focus,
-.add-button:focus,
-.action-button:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(0, 31, 63, 0.5);
-}
-
-/* Novos ajustes para alinhar as informações */
-.students-list li .student-info {
-  width: 100%;
-}
-
-.students-list li .info {
+  transition: background-color 0.3s ease;
+  position: fixed; /* Fixa o botão na tela */
+  bottom: 20px; /* Distância do fundo */
+  right: 20px; /* Distância da direita */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px; /* Ajusta o tamanho do ícone + */
+  font-weight: bold;
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-  .filter {
-    margin-left: auto;
-    margin-right: 0;
-  }
-
-  .filter select {
-    width: auto;
-    max-width: none;
-  }
+.add-button:hover {
+  background-color: #003366; /* Cor navy blue mais escura no hover */
 }
