--- a/src/app/student-register/student-register.component.css
+++ b/src/app/student-register/student-register.component.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #f5f5f5;
 }
 
 .container {
@@ -14,34 +15,33 @@ body {
   font-size: 30px;
   margin-bottom: 20px;
   font-weight: bold;
-  font-size: 60px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  font-size: 36px;
+  margin-top: 20px;
 }
 
 .form-container {
-  width: 100%;
+  width: 90%;
   margin: 20px auto;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  padding: 10px;
+  padding: 20px;
+  background-color: #fff;
 }
 
 .form-group {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 15px;
+  margin-bottom: 15px;
 }
 
 .input-group {
-  flex-basis: calc(50% - 10px);
-  margin-bottom: 10px;
+  flex-basis: 100%;
+  margin-bottom: 15px;
 }
 
 label {
-  flex-basis: 100%;
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
@@ -52,41 +52,28 @@ label {
 input,
 select {
   width: calc(100% - 20px);
-  padding: 8px;
+  padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #001f3f;
   border-radius: 5px;
+  font-family: 'Arial', sans-serif; /* Fonte Arial */
+  font-size: 16px; /* Tamanho da fonte maior */
+  color: #001f3f; /* Cor azul navy */
 }
 
 #serie {
-  height: 30px;
-  width: calc(100% - 20px);
-  font-size: 15px;
-  border: 1px solid #001f3f;
-  border-radius: 5px;
-  padding: 5px;
-  background-color: #fff;
-  color: #001f3f;
-  cursor: pointer;
-}
-
-#serie:hover {
-  background-color: #f0f8ff;
-}
-
-#serie:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(0, 31, 63, 0.5);
+  height: 40px;
 }
 
 button {
-  margin-top: 10px;
   background-color: #001f3f;
   color: #fff;
   border: none;
-  padding: 10px 20px;
+  padding: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin: 0 auto; /* Adicionado para centralizar horizontalmente */
+  display: block; /* Para ocupar a largura total disponível */
 }
 
 button:hover {
@@ -97,7 +84,7 @@ button:hover {
   background-color: #001f3f;
   color: #fff;
   border: none;
-  padding: 10px 10px;
+  padding: 15px;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 15px;
