--- a/src/app/student-list/student-list.component.css
+++ b/src/app/student-list/student-list.component.css
@@ -77,6 +77,7 @@ label {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-weight: bold;
 }
 
 .filter-button:hover,
@@ -131,7 +132,9 @@ label {
 }
 
 .nome {
-  font-size: 14px; /* Diminui a fonte do nome */
+  font-size: 14px;
+  color: #001f3f;
+   /* Diminui a fonte do nome */
 }
 
 .info {
@@ -139,10 +142,13 @@ label {
   flex-basis: 48%; /* Ocupar quase metade da largura para dois detalhes por linha */
   text-align: center;
   margin-bottom: 10px;
+  color: #001f3f;
 }
 
 .info-nome {
-  font-size: 18px; /* Aumenta a fonte do nome */
+  font-size: 18px;
+  font-weight: bold; 
+  color: #001f3f;/* Aumenta a fonte do nome */
 }
 
 .action-buttons {
