--- a/src/app/student-update/student-update.component.html
+++ b/src/app/student-update/student-update.component.html
@@ -32,15 +32,15 @@
                 <div class="input-group">
                     <label for="serie">Série: </label>
                     <select id="serie" name="serie" [(ngModel)]="updatedStudent.serie">
-                        <option value="1">1º Ano</option>
-                        <option value="2">2º Ano</option>
-                        <option value="3">3º Ano</option>
-                        <option value="4">4º Ano</option>
-                        <option value="5">5º Ano</option>
-                        <option value="6">6º Ano</option>
-                        <option value="7">7º Ano</option>
-                        <option value="8">8º Ano</option>
-                        <option value="9">9º Ano</option>
+                        <option value="1º Ano">1º Ano</option>
+                        <option value="2º Ano">2º Ano</option>
+                        <option value="3º Ano">3º Ano</option>
+                        <option value="4º Ano">4º Ano</option>
+                        <option value="5º Ano">5º Ano</option>
+                        <option value="6º Ano">6º Ano</option>
+                        <option value="7º Ano">7º Ano</option>
+                        <option value="8º Ano">8º Ano</option>
+                        <option value="9º Ano">9º Ano</option>
                     </select>
                 </div>
             
